fix: white showing on top and bottom on first paint on mobile browsers

--- a/static/global.css
+++ b/static/global.css
@@ -32,9 +32,12 @@ html,
 body {
   margin: 0;
   padding: 0;
+  min-height: 100%;
+  min-height: 100svh;
   overflow-x: hidden;
   box-sizing: border-box;
   overscroll-behavior: none;
+  background-color: var(--background-outer-color);
   background: radial-gradient(
     56.63% 56.63% at 50% 43.37%,
     var(--background-inner-color) 0%,
